fixed custom widget color theme to align with context menu

--- a/src/vs/editor/contrib/codeAction/browser/media/action.css
+++ b/src/vs/editor/contrib/codeAction/browser/media/action.css
@@ -17,7 +17,8 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: var(--vscode-editorSuggestWidget-border);
-	background-color: var(--vscode-editorSuggestWidget-background);
+	background-color: var(--vscode-menu-background);
+	color: var(--vscode-menu-foreground);
 }
 
 .codeActionMenuWidget .monaco-list:not(.element-focused):focus:before {
@@ -41,7 +42,6 @@
 	-ms-user-select: none;
 	border: none !important;
 	border-width: 0px !important;
-	color: var(red) !important;
 }
 
 /* .codeActionMenuWidget .monaco-list:not(.element-focus) {
@@ -74,6 +74,7 @@
 
 .codeActionMenuWidget .monaco-list .monaco-list-row:hover:not(.option-disabled),
 .codeActionMenuWidget .monaco-list .moncao-list-row.focused:not(.option-disabled) {
+	color: var(--vscode-menu-selectionForeground) !important;
 	background-color: var(--vscode-menu-selectionBackground) !important;
 }
 
@@ -86,7 +87,7 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	color: var(--vscode-list-inactiveSelectionBackground) !important;
+	color: var(--vscode-disabledForeground) !important;
 }
 
 .codeActionMenuWidget .monaco-list .separator {
